fix: fix scrolling on mobile hopefully for the last time

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 
 html {
   height: 100%;
-  overflow-x: hidden;
   box-sizing: border-box;
   font-family: "JetBrains Mono", liberation mono, monospace;
   line-height: calc(1em + 0.5rem);
@@ -30,7 +29,6 @@ body {
   align-items: center;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
 }
 
 /* Default element styles */
